--- a/src/BlazorKoans.App/Components/Exercises/RadzenKoans/ColumnTypesDemo.razor
+++ b/src/BlazorKoans.App/Components/Exercises/RadzenKoans/ColumnTypesDemo.razor
@@ -5,32 +5,36 @@
 
 <h3>Column Types Demo</h3>
 
-<RadzenDataGrid Data="@employees" TItem="Employee" Style="width: 100%">
-    <Columns>
-        <RadzenDataGridColumn TItem="Employee" Property="Name" Title="Employee Name" Frozen="true" />
-        <RadzenDataGridColumn TItem="Employee" Property="Department" Title="Department" />
-        <RadzenDataGridColumn TItem="Employee" Property="Salary" Title="Salary" FormatString="{0:C}" TextAlign="global::Radzen.TextAlign.Right" />
-        <RadzenDataGridColumn TItem="Employee" Property="HireDate" Title="Hire Date" FormatString="{0:d}" />
-        <RadzenDataGridColumn TItem="Employee" Title="Status" Width="120px">
-            <Template Context="employee">
-                @if (employee.IsActive)
-                {
-                    <RadzenBadge BadgeStyle="BadgeStyle.Success" Text="Active" />
-                }
-                else
-                {
-                    <RadzenBadge BadgeStyle="BadgeStyle.Danger" Text="Inactive" />
-                }
-            </Template>
-        </RadzenDataGridColumn>
-        <RadzenDataGridColumn TItem="Employee" Title="Actions" Width="150px" Sortable="false">
-            <Template Context="employee">
-                <RadzenButton Text="Edit" ButtonStyle="global::Radzen.ButtonStyle.Primary" Size="global::Radzen.ButtonSize.Small"
-                              Click="@(() => EditEmployee(employee.Id))" />
-            </Template>
-        </RadzenDataGridColumn>
-    </Columns>
-</RadzenDataGrid>
+<p><em>Scroll horizontally to see the frozen "Employee Name" column stay in place.</em></p>
+
+<div style="max-width: 600px; overflow-x: auto;">
+    <RadzenDataGrid Data="@employees" TItem="Employee" Style="width: 1200px;">
+        <Columns>
+            <RadzenDataGridColumn TItem="Employee" Property="Name" Title="Employee Name" Width="180px" Frozen="true" />
+            <RadzenDataGridColumn TItem="Employee" Property="Department" Title="Department" Width="200px" />
+            <RadzenDataGridColumn TItem="Employee" Property="Salary" Title="Salary" Width="150px" FormatString="{0:C}" TextAlign="global::Radzen.TextAlign.Right" />
+            <RadzenDataGridColumn TItem="Employee" Property="HireDate" Title="Hire Date" Width="150px" FormatString="{0:d}" />
+            <RadzenDataGridColumn TItem="Employee" Title="Status" Width="120px">
+                <Template Context="employee">
+                    @if (employee.IsActive)
+                    {
+                        <RadzenBadge BadgeStyle="BadgeStyle.Success" Text="Active" />
+                    }
+                    else
+                    {
+                        <RadzenBadge BadgeStyle="BadgeStyle.Danger" Text="Inactive" />
+                    }
+                </Template>
+            </RadzenDataGridColumn>
+            <RadzenDataGridColumn TItem="Employee" Title="Actions" Width="150px" Sortable="false">
+                <Template Context="employee">
+                    <RadzenButton Text="Edit" ButtonStyle="global::Radzen.ButtonStyle.Primary" Size="global::Radzen.ButtonSize.Small"
+                                  Click="@(() => EditEmployee(employee.Id))" />
+                </Template>
+            </RadzenDataGridColumn>
+        </Columns>
+    </RadzenDataGrid>
+</div>
 
 <div class="status-panel">
     <p>Last Action: @LastAction</p>
