--- a/src/BlazorKoans.App/Components/App.razor
+++ b/src/BlazorKoans.App/Components/App.razor
@@ -18,6 +18,7 @@
 <body>
     <Routes />
     <ReconnectModal />
+    <script src="_content/Radzen.Blazor/Radzen.Blazor.js"></script>
     <script src="@Assets["_framework/blazor.web.js"]"></script>
 </body>
 
