Fix PagerPosition test to use TopAndBottom enum value
- Updated E_Paging test to ask about TopAndBottom (correct enum name)
- Fixed comment to list correct PagerPosition values: Bottom, Top, TopAndBottom
- Updated PagingDemo to demonstrate TopAndBottom pager position

--- a/src/BlazorKoans.App/Components/Exercises/RadzenKoans/PagingDemo.razor
+++ b/src/BlazorKoans.App/Components/Exercises/RadzenKoans/PagingDemo.razor
@@ -8,8 +8,8 @@
 <RadzenDataGrid Data="@employees" TItem="Employee"
                 AllowPaging="true"
                 PageSize="3"
-                PageSizeOptions="@(new int[] { 3, 5, 10 })"
-                PagerPosition="PagerPosition.Bottom"
+                PageSizeOptions="@([ 3, 5, 10 ])"
+                PagerPosition="PagerPosition.TopAndBottom"
                 ShowPagingSummary="true"
                 Style="width: 100%">
     <Columns>
