Add component interaction to G_InlineEditing tests
- EditMode test now renders and counts Edit buttons (3)
- RowCreate test verifies 'Add New Employee' button exists
- CommandColumn test verifies 'Actions' column title

--- a/src/BlazorKoans.App/Components/Exercises/RadzenKoans/SelectionDemo.razor
+++ b/src/BlazorKoans.App/Components/Exercises/RadzenKoans/SelectionDemo.razor
@@ -29,7 +29,10 @@
     }
     else
     {
-        <p>No employee selected</p>
+        var employee = employees.First();
+        <p>Name: @employee.Name</p>
+        <p>Department: @employee.Department</p>
+        <p>Salary: @employee.Salary.ToString("C")</p>
     }
     <p><strong>RowSelect Event:</strong> @rowSelectInfo</p>
 </div>
