--- a/src/BlazorKoans.App/Components/Pages/Exercises.razor
+++ b/src/BlazorKoans.App/Components/Pages/Exercises.razor
@@ -87,6 +87,7 @@
                         <li><a href="exercises/radzenkoans/PagingDemo">PagingDemo</a></li>
                         <li><a href="exercises/radzenkoans/SelectionDemo">SelectionDemo</a></li>
                         <li><a href="exercises/radzenkoans/InlineEditingDemo">InlineEditingDemo</a></li>
+                        <li><a href="exercises/radzenkoans/StateMachineEditingDemo">StateMachineEditingDemo</a></li>
                         <li><a href="exercises/radzenkoans/LoadDataDemo">LoadDataDemo</a></li>
                     </ul>
                 </div>
